<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    tools:context=".Login.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/topLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/top_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="Ro'yxatdan\n o'ting"
                        android:textColor="@color/white"
                        android:textSize="39sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.426" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/women1" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerLayout0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="28dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/topLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="@string/name"
                    android:textColor="#043BFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_radio_button"
                    android:hint="@string/enterName"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="28dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/linerLayout0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="@string/email_and_numberText"
                    android:textColor="#043BFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edEmail_or_number"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_radio_button"
                    android:hint="@string/enterYourEmail"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="28dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/linerLayout1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="@string/address"
                    android:textColor="#043BFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edAddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_radio_button"
                    android:hint="@string/enterAddress"
                    android:inputType="textPassword"
                    android:padding="8dp" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_button"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linerLayout2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/btnNext">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hanaAnAccount" />

                <TextView
                    android:id="@+id/txtSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/signIn"
                    android:textColor="#2454F8" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>