<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    tools:context=".Login.CreatePasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/ios_back_ic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_oval"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_back" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/imgLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="68dp"
                    android:src="@drawable/ic_frame_52" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Maxfiy kodni yarating"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="32dp"
                android:drawablePadding="10dp"
                android:text="@string/password"
                android:background="@drawable/background_radio_button"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="@id/imgLayout"
                app:layout_constraintStart_toStartOf="@id/imgLayout"
                app:layout_constraintTop_toBottomOf="@id/imgLayout" />

            <EditText
                android:id="@+id/edRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:drawablePadding="10dp"
                android:text="Maxfiy codni tasdiqlang"
                android:background="@drawable/background_radio_button"
                android:drawableStart="@drawable/ic_outline_lock_clock_24"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="@id/imgLayout"
                app:layout_constraintStart_toStartOf="@id/imgLayout"
                app:layout_constraintTop_toBottomOf="@id/edPassword" />

            <TextView
                android:id="@+id/rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/edRepeatPassword"
                android:text="*  Parol 8 ta belgidan iborat bo'lishi kerak."/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintTop_toBottomOf="@+id/rules"
                android:layout_marginTop="120dp"
                android:text="@string/verify"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/background_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/btnNext"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helpMe"/>
                <TextView
                    android:id="@+id/txtHelp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    android:textColor="#2454F8"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>